add circulation fig

--- a/pyReef/agutmpl2015.tex
+++ b/pyReef/agutmpl2015.tex
@@ -275,6 +275,15 @@ Combined with the climatic forcing described above, two additional wave factors 
 
 \noindent For each forcing conditions, the wave transformation model computes and returns the significant wave height, the mean wave direction and the root-mean-square value of the maxima of the orbital velocity near the bottom. These parameters are subsequently used to evaluate the long-term hydrodynamic forces active over the simulated region.
 
+
+\begin{figure*}
+\centering
+\noindent\includegraphics[width=38pc]{figs/fig2.pdf}
+\caption{Diagram of fuzzy logic process used in pyReef to evaluate a specific coral assemblage (assemblage 1) growth rate. The approach is illustrated from a point on the carbonate platform with a water depth of 8 m, an average sedimentation rate of 5 m/kyr and an average bottom orbital velocity of 1.5 m/s. The production rate is related to three control variables in this example: the \textit{sedimentation rate}, the \textit{water depth} and the \textit{wave energy}. For each of these variables two membership functions are defined (as an example the water depth is described using the \textit{shallow depth} and \textit{medium depth} functions). The combination of these functions forms a fuzzy set. Two fuzzy rules (based on \textit{if-then} rules) control the production of coral assemblage 1. Each production membership function is then restricted by the minimum (\textit{and} operator) of the membership degree values obtained from combination of the functions active in the considered rule. Aggregation of the truncated production membership functions is done by overlapping the curves and taking the maximum values. Finally the evaluation of the production rate is done through defuzzification by employing the centroid method which returns a \textit{crisp} value of 1.05 m/kyr for the considered point.
+}
+\label{circfig}
+\end{figure*}
+
 \subsection{Long-term wave-driven circulation}
 
 Flow circulation in and around reef platforms depends on the complex interactions between the overlying water motion and the three-dimensional bottom roughness formed by reef organisms. Attempts to numerically simulate flow dynamics around individual coral colonies have been proposed \citep{Kaandorp03, Chang09, Chindapol13} but such models require the flows to be solve down to few millimetres scale and are beyond the scope of our approach. Here we assume that the flow circulation in the reef platform is mainly driven by waves and regional-scale drivers of reefs hydrodynamics such as coastal upwelling or ocean currents are ignored. Numerical studies of wave-driven flow around reef systems commonly use depth-averaged Navier-Stokes equations \citep{Raupach82, Symonds95, Lowe05, Lowe09, Pomeroy12, Taebi11}. In the context of millennial scale reef platform evolution, these methods however are still computationally prohibitive. In pyReef, the proposed method consists in producing \textit{snapshots} of wave-driven circulation distribution resulting from series of deep-water wave scenarios by computing time-averaged cross-shore and longshore currents.
@@ -351,7 +360,7 @@ To simulate bed morphology and stratigraphic evolution a classical multi-level b
 \noindent\includegraphics[width=37pc]{figs/fig3.pdf}
 \caption{Diagram of fuzzy logic process used in pyReef to evaluate a specific coral assemblage (assemblage 1) growth rate. The approach is illustrated from a point on the carbonate platform with a water depth of 8 m, an average sedimentation rate of 5 m/kyr and an average bottom orbital velocity of 1.5 m/s. The production rate is related to three control variables in this example: the \textit{sedimentation rate}, the \textit{water depth} and the \textit{wave energy}. For each of these variables two membership functions are defined (as an example the water depth is described using the \textit{shallow depth} and \textit{medium depth} functions). The combination of these functions forms a fuzzy set. Two fuzzy rules (based on \textit{if-then} rules) control the production of coral assemblage 1. Each production membership function is then restricted by the minimum (\textit{and} operator) of the membership degree values obtained from combination of the functions active in the considered rule. Aggregation of the truncated production membership functions is done by overlapping the curves and taking the maximum values. Finally the evaluation of the production rate is done through defuzzification by employing the centroid method which returns a \textit{crisp} value of 1.05 m/kyr for the considered point.
 }
-\label{fuzzy}
+\label{fuzzyfig}
 \end{figure*}
 
 \subsection{Carbonate growth and disintegration}\label{fuzzy}
@@ -360,9 +369,9 @@ The organisation of coral reef systems is known to be large and complex and we a
 
 Alternative approaches such as fuzzy logic, which is by definition able to cope with these imprecisions \citep{Demicco01, Collin15}, have proven to be a viable alternative to simulate carbonate systems \citep{Salles11, Hattab13}. Fuzzy logic method is able to create logical propositions from qualitative data by using linguistic logic rules and \textit{fuzzy sets} \citep{Nordlund96}. These fuzzy sets are defined with continuous boundaries rather than \textit{crisp} discontinuous ones usually used in conventional approaches \citep{Meesters98}. In depth mathematical theory behind fuzzy logic method can be found in \citet{Zadeh65}, \citet{Zimmerman91} and \citet{Berkan97}.
 
-\noindent Based on a fuzzy logic approach, carbonate system evolution in pyReef is driven entirely by a set of linguistic rules whose variables are fully adjustable. Therefore, the utility and effectiveness of the approach is mostly based on the user's understanding of the modelled carbonate system. The technique is specifically useful to understand how particular variable, in isolation or in combination with other factors, influences carbonate depositional geometries and reef adaptation.
+\noindent Based on a fuzzy logic approach, carbonate system evolution in pyReef is driven entirely by a set of linguistic rules whose variables are fully adjustable. Therefore, the utility and effectiveness of the approach is mostly based on the user's understanding of the modelled carbonate system. The technique is specifically useful to understand how particular variable, in isolation or in combination with other factors, influences carbonate depositional geometries and reef adaptation (Fig. \ref{fuzzyfig}).
 
-In its current form, pyReef employs five types of control variables: depth, wave energy (derived from ocean bottom orbital velocity), sedimentation rate, ocean's temperature and acidity. For each of these variables, one can define a range of fuzzy sets using membership functions \citep{Nordlund99}. A membership function is a curve showing the degree of truth (\textit{i.e.} ranging between 0 and 1) of membership in a particular fuzzy set. In pyReef, these curves can be simple triangles, trapezoids, bell-shaped curves, or have more complicated shapes. Production and/or disintegration of any specific coral assemblage is then computed from a series of fuzzy rules. A fuzzy rule is a logic \textit{if-then} rule defined from the fuzzy sets \citep{Demicco01}. In our model, the combination of the fuzzy sets in each fuzzy rule is restricted to the \textit{and} operator. The amalgamation of competing fuzzy rules is usually referred to as a fuzzy system. Summation of multiple rules from the fuzzy system by truncation of the membership functions produces a new fuzzy answer in the form of a new membership set. The last step consists in computing a single number for this fuzzy set through \textit{defuzzification} \citep{Zadeh65}. In pyReef, the centroid (center of gravity) for the area below the membership set is taken as the \textit{defuzzified} output value.
+In its current form, pyReef employs five types of control variables: depth, wave energy (derived from ocean bottom orbital velocity), sedimentation rate, ocean's temperature and acidity. For each of these variables, one can define a range of fuzzy sets using membership functions \citep{Nordlund99}. A membership function is a curve showing the degree of truth (\textit{i.e.} ranging between 0 and 1) of membership in a particular fuzzy set (Fig. \ref{fuzzyfig}). In pyReef, these curves can be simple triangles, trapezoids, bell-shaped curves, or have more complicated shapes as shown in Fig. \ref{fuzzyfig}. Production and/or disintegration of any specific coral assemblage is then computed from a series of fuzzy rules. A fuzzy rule is a logic \textit{if-then} rule defined from the fuzzy sets \citep{Demicco01}. In our model, the combination of the fuzzy sets in each fuzzy rule is restricted to the \textit{and} operator. The amalgamation of competing fuzzy rules is usually referred to as a fuzzy system. Summation of multiple rules from the fuzzy system by truncation of the membership functions produces a new fuzzy answer in the form of a new membership set (Fig. \ref{fuzzyfig}). The last step consists in computing a single number for this fuzzy set through \textit{defuzzification} \citep{Zadeh65}. In pyReef, the centroid (center of gravity) for the area below the membership set is taken as the \textit{defuzzified} output value.
 \\
 \\
 Coupling of the wave transformation approach (SWAN) with the long-term circulation and sediment transport models and with the fuzzy logic technique presented above allow for numerical analysis of carbonate platforms evolution, stratigraphic architecture reconstruction and provides a numerical framework to quantitatively assess reef system responses to climatic forcing over millennial scales.
