add caption circulation fig

--- a/pyReef/agutmpl2015.tex
+++ b/pyReef/agutmpl2015.tex
@@ -279,12 +279,11 @@ Combined with the climatic forcing described above, two additional wave factors 
 \begin{figure*}
 \centering
 \noindent\includegraphics[width=38pc]{figs/fig2.pdf}
-\caption{Diagram of fuzzy logic process used in pyReef to evaluate a specific coral assemblage (assemblage 1) growth rate. The approach is illustrated from a point on the carbonate platform with a water depth of 8 m, an average sedimentation rate of 5 m/kyr and an average bottom orbital velocity of 1.5 m/s. The production rate is related to three control variables in this example: the \textit{sedimentation rate}, the \textit{water depth} and the \textit{wave energy}. For each of these variables two membership functions are defined (as an example the water depth is described using the \textit{shallow depth} and \textit{medium depth} functions). The combination of these functions forms a fuzzy set. Two fuzzy rules (based on \textit{if-then} rules) control the production of coral assemblage 1. Each production membership function is then restricted by the minimum (\textit{and} operator) of the membership degree values obtained from combination of the functions active in the considered rule. Aggregation of the truncated production membership functions is done by overlapping the curves and taking the maximum values. Finally the evaluation of the production rate is done through defuzzification by employing the centroid method which returns a \textit{crisp} value of 1.05 m/kyr for the considered point.
-}
+\caption{Illustration of sediment transport calculation in pyReef. At time step $t$, a gradient map (\textbf{b}) is first derived from the bathymetry (\textbf{a}). In this example, the circulation is forced by a boundary wave condition characterised by a significant wave height of 4 m, a characteristic period of the energy spectrum of 15 s, and a direction of 150 degrees. The wave transformation model is ran on the bathymetry provided at time $t$ with a reef roughness constant of 0.1 and a wave breaking parameter of 0.66. From the considered boundary conditions, estimates of bottom orbital velocity (\textbf{c}) and wave height (\textbf{d}) are returned and used to compute wave-induced circulation in the area (\textbf{e} and \textbf{g}). The bottom velocity in panel \textbf{e} adds together the longshore and cross-shore components presented in section \ref{seccirc}. The circulation is assumed to be representative of the wave conditions in the area for 5\% of the wave forcing time interval (set to 10\% of the year (roughly 1 month)). From the bottom velocity and main current and wave directions, the model then calculates sediment erosion based on the approach from \citet{Soulsby97}. The erosion and deposition apply only to loose carbonate sands (here only one type of coral assemblages is considered). Erosion takes place on the active layer which is set to 0.25 m and contains 50\% of loose sediments. In addition to circulation-driven transport, a gravity-driven one is implemented and relies on the gradient map (\textbf{b}) and a diffusion coefficient set to 0.1 $\textrm{m}^2\textrm{/yr}$ in this example. The resulting erosion deposition map is presented in panels \textbf{f} and \textbf{h}. From this map both the stratigraphic layers and surface are updated and either a new wave boundary forcing conditions active during the considered time interval is ran or the carbonate growth model is applied.}
 \label{circfig}
 \end{figure*}
 
-\subsection{Long-term wave-driven circulation}
+\subsection{Long-term wave-driven circulation}\label{seccirc}
 
 Flow circulation in and around reef platforms depends on the complex interactions between the overlying water motion and the three-dimensional bottom roughness formed by reef organisms. Attempts to numerically simulate flow dynamics around individual coral colonies have been proposed \citep{Kaandorp03, Chang09, Chindapol13} but such models require the flows to be solve down to few millimetres scale and are beyond the scope of our approach. Here we assume that the flow circulation in the reef platform is mainly driven by waves and regional-scale drivers of reefs hydrodynamics such as coastal upwelling or ocean currents are ignored. Numerical studies of wave-driven flow around reef systems commonly use depth-averaged Navier-Stokes equations \citep{Raupach82, Symonds95, Lowe05, Lowe09, Pomeroy12, Taebi11}. In the context of millennial scale reef platform evolution, these methods however are still computationally prohibitive. In pyReef, the proposed method consists in producing \textit{snapshots} of wave-driven circulation distribution resulting from series of deep-water wave scenarios by computing time-averaged cross-shore and longshore currents.
 
