add reference to circulation fig in text

--- a/pyReef/agutmpl2015.tex
+++ b/pyReef/agutmpl2015.tex
@@ -253,7 +253,7 @@ SWAN, short for \textit{Simulating WAves Nearshore}, is a third-generation, fini
 
 \noindent where $N(\vec{x},t,\sigma,\theta)$ is the wave action function of geographical space $\vec{x}$, time $t$, relative frequency $\sigma$ and wave direction $\theta$. $\nabla_{\vec{x}}$ is the gradient operator in space, $\vec{c_g}$ and $\vec{U}$ are the wave group velocity and ambient current vector respectively and $c_{\theta}$, $c_{\sigma}$ is the propagation velocity in $\theta$ and $\sigma$ domain. Finally $S_{tot}$ is the source term which can include wind, whitecapping, surf breaking and bottom friction \citep{Booij99}.
 
-\noindent In our model, shoaling and refraction are accounted for from a series of deep-water wave conditions through time in the absence of wind forcing. Hence to compute wave field generation, the model requires bathymetric conditions and definitions of offshore significant wave height, characteristic period of the energy spectrum and wave direction and associated spreading angle.
+\noindent In our model, shoaling and refraction are accounted for from a series of deep-water wave conditions through time in the absence of wind forcing. Hence to compute wave field generation, the model requires bathymetric conditions and definitions of offshore significant wave height, characteristic period of the energy spectrum, wave direction and associated spreading angle (Fig.~\ref{circfig} panel a and Dir/T distribution plot).
 
 \noindent To evaluate reef responses over several hundreds of years, the approach taken here does not examine temporal evolving wave fields, such as those produced during storm events and relies on SWAN stationary mode. In pyReef, the wave transformation model is generally performed for time intervals varying from $0.5$ to $10$ years. Our aim is to simulate realistic wave fields by imposing a sequence of wave forcing conditions (\textit{e.g.} series of fair-weather and/or storm events). At any given time interval, we define a percentage of activity for each deep-water wave conditions and the bathymetry is used to compute associated wave parameters. Possibility is given to derived these parameters for both low and high tides.
 
@@ -273,7 +273,7 @@ Combined with the climatic forcing described above, two additional wave factors 
 \end{equation}
 \noindent where $A_b$ is the wave excursion distance, $k_N$ is the bottom roughness scale and the coefficients $a_1=$5.213, $a_2=-$0.194, and $a_3=-$5.977 have been set based on \citet{Rogers15}  Palmyra study. Alternate coefficient from \citet{Nielsen92} can also be used ($a_1=$5.5, $a_2=-$0.2, and $a_3=-$6.3). For large values of $A_b/k_N$, this formulation is similar to the one from Madsen et al. [1988] (implemented in SWAN), but extends the parameterisation for lower $A_b/k_N$. In pyReef, the bottom friction is based on the proposed formulation and requires the definition of the bottom roughness scale ($k_N$) which values is generally set to 2-3 times the characteristic diameters of the studied region \citep{Nielsen92, Lowe05, Rogers15}.
 
-\noindent For each forcing conditions, the wave transformation model computes and returns the significant wave height, the mean wave direction and the root-mean-square value of the maxima of the orbital velocity near the bottom. These parameters are subsequently used to evaluate the long-term hydrodynamic forces active over the simulated region.
+\noindent For each forcing conditions, the wave transformation model computes and returns the significant wave height, the mean wave direction and the root-mean-square value of the maxima of the orbital velocity near the bottom (panels c and d in figure \ref{circfig} shows an example of bottom orbital velocity and wave height maps). These parameters are subsequently used to evaluate the long-term hydrodynamic forces active over the simulated region.
 
 
 \begin{figure*}
@@ -285,7 +285,7 @@ Combined with the climatic forcing described above, two additional wave factors 
 
 \subsection{Long-term wave-driven circulation}\label{seccirc}
 
-Flow circulation in and around reef platforms depends on the complex interactions between the overlying water motion and the three-dimensional bottom roughness formed by reef organisms. Attempts to numerically simulate flow dynamics around individual coral colonies have been proposed \citep{Kaandorp03, Chang09, Chindapol13} but such models require the flows to be solve down to few millimetres scale and are beyond the scope of our approach. Here we assume that the flow circulation in the reef platform is mainly driven by waves and regional-scale drivers of reefs hydrodynamics such as coastal upwelling or ocean currents are ignored. Numerical studies of wave-driven flow around reef systems commonly use depth-averaged Navier-Stokes equations \citep{Raupach82, Symonds95, Lowe05, Lowe09, Pomeroy12, Taebi11}. In the context of millennial scale reef platform evolution, these methods however are still computationally prohibitive. In pyReef, the proposed method consists in producing \textit{snapshots} of wave-driven circulation distribution resulting from series of deep-water wave scenarios by computing time-averaged cross-shore and longshore currents.
+Flow circulation in and around reef platforms depends on the complex interactions between the overlying water motion and the three-dimensional bottom roughness formed by reef organisms. Attempts to numerically simulate flow dynamics around individual coral colonies have been proposed \citep{Kaandorp03, Chang09, Chindapol13} but such models require the flows to be solve down to few millimetres scale and are beyond the scope of our approach. Here we assume that the flow circulation in the reef platform is mainly driven by waves and regional-scale drivers of reefs hydrodynamics such as coastal upwelling or ocean currents are ignored. Numerical studies of wave-driven flow around reef systems commonly use depth-averaged Navier-Stokes equations \citep{Raupach82, Symonds95, Lowe05, Lowe09, Pomeroy12, Taebi11}. In the context of millennial scale reef platform evolution, these methods however are still computationally prohibitive. In pyReef, the proposed method consists in producing \textit{snapshots} of wave-driven circulation distribution resulting from series of deep-water wave scenarios by computing time-averaged cross-shore and longshore currents (Fig.~\ref{circfig} panels e and g).
 
 In nearshore environments, longshore current runs parallel to the shore and is generated by the radiation stresses associated with the breaking process for obliquely incoming waves and by the surplus water which is carried across the breaker zone towards the shoreline \citep{Longuet-Higgins70}. This current affect the transport and transfer of mass (loose carbonate sands, nutrients and carbon) in the nearshore reef waters \citep{Hamner88, Monismith07, Lowe15}. Many empirical formulation of longshore current have been proposed since the initial work from   \citet{Longuet-Higgins64}  \citep{Komar70, Komar75, Galvin87, Reniers97, Ruessink01, Grasmeijer03}. In pyReef, the approach from \citet{Komar75} is used to calculate the longshore current velocity ($\vec{v_l}$) in the middle of the breaking zone:
 \begin{equation}
@@ -315,11 +315,11 @@ A common feature of many reef systems is the presence of diverse marine communit
 
 To our knowledge, transport law for calcareous sand based on their hydraulic characteristics has not been proposed yet. It has been recognised \citep{Prager96, Day97, Smith04} that variations in the hydraulic properties between siliceous and calcareous sand due to both their shapes and fall velocities lead to different transport behaviors. From flume experiments, \citet{Smith05} shows that transport models designed for siliceous particles might be applied after a correction factor has been introduced. From their experiment, the model of \citet{Engelund67} seems to provide the best fit with their dataset, however they conclude that these corrections are not universally applicable.
 
-\noindent Therefore, in pyReef, we have chosen to build our transport model based on a classical approach. Assuming sediment transport induced by waves and currents, our method is derived from Soulsby and Van Rijn formulation \citep{Soulsby97}. We compute the total load transport rate resulting from the addition of bed load and suspended load for each type of loose carbonate sands initially set by the user. The model also assumes that each of sand particles are perfectly sorted. The method suits well with our approach as it can be applied in a quasi-steady form. The transport rate is defined by:
+\noindent Therefore, in pyReef, we have chosen to build our transport model based on a classical approach. Assuming sediment transport induced by waves and currents, our method is derived from Soulsby and Van Rijn formulation \citep{Soulsby97}. We compute the total load transport rate resulting from the addition of bed load and suspended load for each type of loose carbonate sands initially set by the user. The model also assumes that each of sand particles are perfectly sorted. The method suits well with our approach as it can be applied in a quasi-steady form. An example of erosion deposition for a given long-term circulation representation is illustrated in figure \ref{circfig} panels f and h. The transport rate is defined by:
 \begin{equation}
 q_t = (A_{sb}+A_{ss}) \bar{v} \left[ \sqrt{\bar{v}^2 + \frac{0.018}{C_D}u_b} - \bar{u_{cr}}\right]^{2.4} (1-1.6 \nabla z)
 \end{equation}
-\noindent where $\bar{v}$ is the depth-averaged current velocity obtained from the long-term wave driven circulation model defined in previous section, $C_D$ is the drag coefficient (due to current alone) and $\nabla z$ the slope. The bed load transport $A_{sb}$ is given by:
+\noindent where $\bar{v}$ is the depth-averaged current velocity obtained from the long-term wave driven circulation model defined in previous section, $C_D$ is the drag coefficient (due to current alone) and $\nabla z$ the slope (Fig.~\ref{circfig} panel b). The bed load transport $A_{sb}$ is given by:
 \begin{equation}
 A_{sb}=\frac{0.005h(d/h)^{1.2}}{(s-1)gd}
 \end{equation}
